<resources>
    <string name="app_name">رایان همراه</string>
    <string name="chart">وضعیت بازار</string>
    <string name="eye">دیده بان</string>
    <string name="portfo">پورتفو</string>
    <string name="shop">سفارشات</string>
    <string name="search">جستجو</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ghodratKharid">قدرت خرید:</string>
    <string name="payPrice">واریز وجه</string>
    <string name="borsChart">شاخص بورس</string>
    <string name="fraBorsChart">شاخص فرابورس</string>
    <string name="otherChart">سایر شاخص ها</string>
    <string name="endPrice">(پایانی)</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>